# wgpu-sandbox

./: .gitignore  Cargo.toml  README.md  index.html
src/: common.rs  lib.rs  main.rs  math.rs  shader.wgsl  teapot.rs  vector.rs
wasm-wrapper/: Cargo.toml
wasm-wrapper/pkg/: wasm_wrapper.d.ts  wasm_wrapper.js  wasm_wrapper_bg.wasm.d.ts
wasm-wrapper/src/: lib.rs
